--- a/AdHoc/res/layout/activity_create_event.xml
+++ b/AdHoc/res/layout/activity_create_event.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="102dp" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -38,14 +38,14 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/tvTitle"
         android:layout_marginTop="34dp"
-        android:layout_toLeftOf="@+id/button1"
+        android:layout_toLeftOf="@+id/btLogin"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
