--- a/AdHoc/res/layout/activity_event_list.xml
+++ b/AdHoc/res/layout/activity_event_list.xml
@@ -8,9 +8,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".EventListActivity" >
 
-    <TextView
+    <FrameLayout
+        android:id="@+id/flEventList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" >
+
+    </FrameLayout>
 
 </RelativeLayout>
