--- a/AdHoc/res/layout/activity_login.xml
+++ b/AdHoc/res/layout/activity_login.xml
@@ -2,39 +2,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/soccer"
     android:contentDescription="@string/fbConnect"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".MainActivity" >
-    
-    <RelativeLayout
-        android:id="@+id/rlBackgroundImage"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/soccer"
-        android:orientation="vertical" >
-
-        <com.facebook.widget.LoginButton
-            android:id="@+id/lgnBtnFacebook"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-
-	</RelativeLayout>
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvLoginTitle"
+        style="@style/AppLoginText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="@string/login_title"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/login_title" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="test"
+        android:text="Button" />
 
 </RelativeLayout>
