--- a/AdHoc/res/layout/activity_login.xml
+++ b/AdHoc/res/layout/activity_login.xml
@@ -17,12 +17,12 @@
         android:text="@string/login_title" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btnLoginFB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="test"
-        android:text="Button" />
+        android:onClick="loginWithParse"
+        android:text="@string/login_button_fb" />
 
 </RelativeLayout>
