-added ActionBar items for easier navigation, go to correct pages also

--- a/AdHoc/res/menu/event_list.xml
+++ b/AdHoc/res/menu/event_list.xml
@@ -1,5 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-
-
+	<item
+        android:id="@+id/action_create_event"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_create_event"
+        android:title="@string/abCreate"/>
+    <item
+        android:id="@+id/action_map"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_map"
+        android:title="@string/abMap"/>
 </menu>
