--- a/AdHoc/res/menu/create_event.xml
+++ b/AdHoc/res/menu/create_event.xml
@@ -1,4 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-
+    <item
+        android:id="@+id/action_map"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_map"
+        android:title="@string/abMap"/>
+    <item
+        android:id="@+id/action_list_events"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_list_events"
+        android:title="@string/abList"/>
 </menu>
