-refactor code so activities in own folder -added create event+necessary items

--- a/AdHoc/res/layout/activity_create_event_map.xml
+++ b/AdHoc/res/layout/activity_create_event_map.xml
@@ -6,16 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".CreateEventActivity" >
+    tools:context=".CreateEventMapActivity" >
 
-    <FrameLayout
-        android:id="@+id/flContainerEvent"
+    <TextView
+        android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
-    </FrameLayout>
+        android:text="@string/hello_world" />
 
 </RelativeLayout>
