--- a/AdHoc/res/layout/fragment_create_event_data.xml
+++ b/AdHoc/res/layout/fragment_create_event_data.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true" />
 
         <TextView
@@ -80,12 +81,13 @@
             android:hint="@string/descBody" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="30dp"
             android:layout_toRightOf="@+id/textView3"
+            android:layout_below="@+id/editText3"
             android:text="Button" />
 
         <TextView
