--- a/AdHoc/res/values/styles.xml
+++ b/AdHoc/res/values/styles.xml
@@ -26,7 +26,7 @@
     <style name="login_button_style" parent="@android:style/Widget.Button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/facebook_button_blue</item>
+        <item name="android:background">#55ACEE</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
