--- a/AdHoc/res/menu/event_details.xml
+++ b/AdHoc/res/menu/event_details.xml
@@ -14,4 +14,9 @@
         android:showAsAction="ifRoom"
         android:icon="@drawable/ic_list_events"
         android:title="@string/abList"/>
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="900"
+        android:showAsAction="never"
+        android:title="@string/action_logout"/>
 </menu>
