--- a/AdHoc/res/menu/event_list.xml
+++ b/AdHoc/res/menu/event_list.xml
@@ -9,4 +9,9 @@
         android:showAsAction="ifRoom"
         android:icon="@drawable/ic_map"
         android:title="@string/abMap"/>
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="900"
+        android:showAsAction="never"
+        android:title="@string/action_logout"/>
 </menu>
