-added checks for create event data -create event activite calls check data on fragment createeventdata -fixed up list of events a bit -fixed up create event activity

--- a/AdHoc/res/layout/activity_create_event.xml
+++ b/AdHoc/res/layout/activity_create_event.xml
@@ -12,10 +12,20 @@
         android:id="@+id/flContainerEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/btnSave"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true">
+
     </FrameLayout>
+
+    <Button
+        android:id="@+id/btnSave"
+        android:onClick="clickSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/save" />
 
 </RelativeLayout>
