--- a/AdHoc/res/layout/fragment_create_event_data.xml
+++ b/AdHoc/res/layout/fragment_create_event_data.xml
@@ -9,105 +9,74 @@
         android:layout_height="461dp" >
 
         <Spinner
-            android:id="@+id/spinner1"
-            android:paddingBottom="8dp"
+            android:id="@+id/spListEvents"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:paddingBottom="8dp"
+            android:prompt="@string/sport_prompt"
+            android:entries="@array/sport_array" />
 
         <TextView
-            android:id="@+id/textView1"
-            android:paddingBottom="8dp"
+            android:id="@+id/tvMaxAttendees"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/spinner1"
-            android:text="@string/minAtt"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/tvTime"
+            android:layout_below="@+id/spListEvents"
             android:paddingBottom="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/textView1"
             android:text="@string/maxAtt"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/etMaxAttendees"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView1"
             android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/textView1"
-            android:layout_toRightOf="@+id/tvTime"
+            android:layout_below="@+id/spListEvents"
+            android:layout_toRightOf="@+id/tvMaxAttendees"
             android:ems="10"
             android:inputType="number" >
         </EditText>
 
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvTime"
-            android:layout_alignLeft="@+id/editText1"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/tvTime"
-            android:ems="10"
-            android:inputType="number" />
-
         <TextView
-            android:id="@+id/tvDistance"
+            android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/timePicker1"
+            android:layout_below="@+id/tpStartTime"
             android:text="@string/desc"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
-            android:id="@+id/editText3"
-            android:paddingBottom="8dp"
+            android:id="@+id/etDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/tvDistance"
+            android:layout_below="@+id/tvDescription"
             android:ems="10"
-            android:hint="@string/descBody" />
-
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="30dp"
-            android:layout_toRightOf="@+id/tvDistance"
-            android:layout_below="@+id/editText3"
-            android:text="Button" />
+            android:hint="@string/descBody"
+            android:paddingBottom="8dp" />
 
         <TextView
-            android:id="@+id/tvRemainingSpots"
+            android:id="@+id/tvStartTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/tvTime"
+            android:layout_below="@+id/tvMaxAttendees"
             android:text="@string/timeDesc"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TimePicker
-            android:id="@+id/timePicker1"
-            android:paddingBottom="8dp"
+            android:id="@+id/tpStartTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/tvRemainingSpots" />
-
+            android:layout_below="@+id/tvStartTime"
+            android:paddingBottom="8dp" />
     </RelativeLayout>
 
 </ScrollView>
