--- a/AdHoc/res/menu/create_event.xml
+++ b/AdHoc/res/menu/create_event.xml
@@ -14,4 +14,9 @@
         android:orderInCategory="900"
         android:showAsAction="never"
         android:title="@string/action_logout"/>
+    <item
+        android:id="@+id/action_gotodetails"
+        android:orderInCategory="910"
+        android:showAsAction="never"
+        android:title="DETAILS"/>
 </menu>
