--- a/AdHoc/res/layout/fragment_create_event_map.xml
+++ b/AdHoc/res/layout/fragment_create_event_map.xml
@@ -8,10 +8,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CreateEventMapActivity" >
 
-    <TextView
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+	<RelativeLayout
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" 
+        android:name="com.google.android.gms.maps.MapFragment">
+    </RelativeLayout>
+<!--     <TextView -->
+<!--         android:id="@+id/test" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:text="@string/hello_world" /> -->
 
 </RelativeLayout>
