Location get for the event is working
Location is an activity that gets triggered on text focus
Fixed a few things from Brian checkins . Brian please let me know if I
broke some thing.

--- a/AdHoc/res/layout/activity_location.xml
+++ b/AdHoc/res/layout/activity_location.xml
@@ -8,4 +8,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LocationActivity" >
 
+    
+    <fragment
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.MapFragment" />
+    
+<!-- 	<RelativeLayout -->
+<!--         android:id="@+id/mapView" -->
+<!--         android:layout_width="match_parent" -->
+<!--         android:layout_height="match_parent" -->
+<!--         android:layout_alignParentLeft="true" -->
+<!--         android:layout_alignParentTop="true"  -->
+<!--         android:name="com.google.android.gms.maps.MapFragment"> -->
+<!--     </RelativeLayout> -->
+    
 </RelativeLayout>
