--- a/AdHoc/res/layout/fragment_list.xml
+++ b/AdHoc/res/layout/fragment_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -7,7 +7,9 @@
     <eu.erikw.PullToRefreshListView
         android:id="@+id/lvEvents"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" >
     </eu.erikw.PullToRefreshListView>
 
-</LinearLayout>
+</RelativeLayout>
