-refactored name of some fragments -have list view set to main screen -tilting works for create event -tilting works for event details (no extra loading) -remove padding from maps -cancel button works properly for setting time -fixed bug with setting end time after start time -fix multiple listeners bug with time -created custom dialog for time, Android bug made CANCEL not function

--- a/AdHoc/res/layout/fragment_create_event_data.xml
+++ b/AdHoc/res/layout/fragment_create_event_data.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateEventDataActivity" >
+    tools:context=".CreateEventDataFragment" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -62,8 +62,6 @@
             android:ems="10"
             android:hint="@string/descBody"
             android:paddingBottom="8dp" >
-
-            <requestFocus />
         </EditText>
 
         <TextView
