--- a/AdHoc/res/layout/activity_event_details.xml
+++ b/AdHoc/res/layout/activity_event_details.xml
@@ -8,15 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".EventDetailsActivity" >
 
-    <FrameLayout
-        android:id="@+id/frameLayout2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
-    </FrameLayout>
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -76,33 +67,14 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" />
 
-    <FrameLayout
-        android:id="@+id/frameLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_marginBottom="58dp" >
-    </FrameLayout>
-
     <fragment
         android:id="@+id/map"
         android:name="com.codepath.adhoc.fragments.AdhocMapFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/frameLayout1"
-        android:layout_below="@+id/frameLayout2"
-        android:layout_toRightOf="@+id/frameLayout1" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
-        android:layout_marginBottom="108dp"
-        android:layout_toLeftOf="@+id/button1"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_above="@+id/textView3"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:id="@+id/textView5"
@@ -118,17 +90,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="53dp"
         android:onClick="onAction"
         android:text="Button" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/pbProgess"
+        android:layout_alignLeft="@+id/textView2"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView7"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_marginBottom="17dp"
+        android:layout_above="@+id/textView6"
+        android:layout_alignRight="@+id/textView4"
         android:text="TextView" />
 
 </RelativeLayout>
