--- a/AdHoc/res/layout/activity_event_details.xml
+++ b/AdHoc/res/layout/activity_event_details.xml
@@ -52,20 +52,6 @@
         android:layout_alignBottom="@+id/textView7"
         android:layout_toRightOf="@+id/textView7"
         android:text="TextView" />
-    
-    <TextView
-        android:id="@+id/tvLoad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/pbProgess"
-        android:layout_centerHorizontal="true"
-        android:text="@string/getData" />
-    <ProgressBar
-        android:id="@+id/pbProgess"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
 
     <fragment
         android:id="@+id/map"
@@ -97,8 +83,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/pbProgess"
         android:layout_alignLeft="@+id/textView2"
+        android:layout_centerVertical="true"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -109,5 +95,36 @@
         android:layout_above="@+id/textView6"
         android:layout_alignRight="@+id/textView4"
         android:text="TextView" />
+
+    <LinearLayout
+        android:id="@+id/llProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+    	android:paddingLeft="5dp"
+    	android:paddingRight="5dp"
+    	android:paddingTop="5dp"
+        android:background="@drawable/progress_box" >
+        <TextView
+            android:id="@+id/tvLoad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/getData" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ProgressBar
+            android:id="@+id/pbProgess"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"/>
+        </RelativeLayout>
+        
+    </LinearLayout>
 
 </RelativeLayout>
