--- a/AdHoc/res/layout/fragment_create_event_map.xml
+++ b/AdHoc/res/layout/fragment_create_event_map.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" 
-        android:name="com.google.android.gms.maps.MapFragment">
+        android:name="com.google.android.gms.maps.SupportMapFragment">
     </RelativeLayout>
 <!--     <TextView -->
 <!--         android:id="@+id/test" -->
