-save/cancel button -textbox to go to location uses onclick listener, so now can click multiple times to go to location -location should grab previous one if there is one

--- a/AdHoc/res/layout/fragment_create_event_map.xml
+++ b/AdHoc/res/layout/fragment_create_event_map.xml
@@ -3,19 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreateEventMapFragment" >
-
-	<RelativeLayout
-        android:id="@+id/mapView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" 
-        android:name="com.google.android.gms.maps.SupportMapFragment">
-    </RelativeLayout>
 <!--     <TextView -->
 <!--         android:id="@+id/test" -->
 <!--         android:layout_width="wrap_content" -->
 <!--         android:layout_height="wrap_content" -->
 <!--         android:text="@string/hello_world" /> -->
+
+	<RelativeLayout
+	    android:id="@+id/mapView"
+	    android:name="com.google.android.gms.maps.SupportMapFragment"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_above="@+id/button1"
+	    android:layout_alignParentLeft="true"
+	    android:layout_alignParentTop="true" >
+
+	</RelativeLayout>
 
 </RelativeLayout>
