Added user relation to events list

--- a/AdHoc/res/layout/fragment_item_event.xml
+++ b/AdHoc/res/layout/fragment_item_event.xml
@@ -36,4 +36,12 @@
         android:layout_below="@+id/tvStartTime"
         android:text="Regular Text" />
 
+    <TextView
+        android:id="@+id/tvHostedOrJoined"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/tvMaxAttendees"
+        android:text="Regular Text" />
+
 </RelativeLayout>
