-fixed list not populating user relation at correct time -remove "Drag me" from event creation marker -changed map default zoom -screen orientation locked -fixed maps, not getting location correctly and not showing user loc

--- a/AdHoc/res/layout/fragment_item_event.xml
+++ b/AdHoc/res/layout/fragment_item_event.xml
@@ -42,6 +42,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvMaxAttendees"
-        android:text="Regular Text" />
+        android:text="" />
 
 </RelativeLayout>
