Background color should rely within the list activity instead of just the list fragment, making it stay as consistent as possible once this activity launches from anywhere.

--- a/AdHoc/res/layout/activity_event_list.xml
+++ b/AdHoc/res/layout/activity_event_list.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventListActivity" >
+    tools:context=".EventListActivity"
+    android:background="#228B22" >
 
     <FrameLayout
         android:id="@+id/flEventList"
