--- a/AdHoc/res/layout/fragment_create_event_data.xml
+++ b/AdHoc/res/layout/fragment_create_event_data.xml
@@ -15,9 +15,84 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
+            android:entries="@array/sport_array"
             android:paddingBottom="8dp"
-            android:prompt="@string/sport_prompt"
-            android:entries="@array/sport_array" />
+            android:prompt="@string/sport_prompt" />
+
+        <EditText
+            android:id="@+id/etLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/relativeLayout1"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="@string/location" >
+
+            <requestFocus />
+        </EditText>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout1"
+            style="@style/SectionDivider"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/tvMaxAttendees"
+            android:layout_marginTop="22dp" >
+
+            <TextView
+                android:id="@+id/tvStopTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/tvStartTime"
+                android:layout_marginTop="10dp"
+                android:text="@string/endTime"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/tvStartTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/etEndTime"
+                android:layout_alignParentLeft="true"
+                android:text="@string/startTime"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <EditText
+                android:id="@+id/etEndTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/etStartTime"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:ems="10"
+                android:gravity="right" />
+
+            <EditText
+                android:id="@+id/etStartTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/tvStopTime"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@+id/tvStartTime"
+                android:ems="10"
+                android:gravity="right" />
+        </RelativeLayout>
+
+        <EditText
+            android:id="@+id/etMaxAttendees"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/tvMaxAttendees"
+            android:layout_alignBottom="@+id/tvMaxAttendees"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/tvMaxAttendees"
+            android:ems="10"
+            android:gravity="right"
+            android:inputType="number" />
 
         <TextView
             android:id="@+id/tvMaxAttendees"
@@ -25,30 +100,17 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/spListEvents"
+            android:layout_marginTop="38dp"
             android:paddingBottom="8dp"
             android:text="@string/maxAtt"
             android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/etMaxAttendees"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/spListEvents"
-            android:layout_toRightOf="@+id/tvStartTime"
-            android:ems="10"
-            android:gravity="right"
-            android:inputType="number" >
-
-        </EditText>
 
         <TextView
             android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/tvLocation"
-            android:layout_marginTop="18dp"
+            android:layout_below="@+id/etLocation"
             android:text="@string/desc"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -60,72 +122,10 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tvDescription"
             android:ems="10"
-            android:maxLength="200"
             android:hint="@string/descBody"
-            android:paddingBottom="8dp" >
-        </EditText>
+            android:maxLength="200"
+            android:paddingBottom="8dp" />
 
-        <TextView
-            android:id="@+id/tvStartTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/etMaxAttendees"
-            android:layout_marginTop="19dp"
-            android:text="@string/startTime"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/etStartTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvStartTime"
-            android:layout_alignLeft="@+id/etMaxAttendees"
-            android:layout_alignParentRight="true"
-            android:ems="10"
-            android:gravity="right" />
-
-        <TextView
-            android:id="@+id/tvStopTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/tvStartTime"
-            android:layout_marginTop="10dp"
-            android:text="@string/endTime"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/etLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/tvDescription"
-            android:layout_alignLeft="@+id/etEndTime"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/etEndTime"
-            android:ems="10"
-            android:gravity="right" />
-
-        <TextView
-            android:id="@+id/tvLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/tvStopTime"
-            android:layout_marginTop="10dp"
-            android:text="@string/location"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <EditText
-            android:id="@+id/etEndTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/tvLocation"
-            android:layout_alignLeft="@+id/etStartTime"
-            android:layout_alignParentRight="true"
-            android:ems="10"
-            android:gravity="right" />
-        
     </RelativeLayout>
 
 </ScrollView>
