--- a/AdHoc/res/layout/fragment_list.xml
+++ b/AdHoc/res/layout/fragment_list.xml
@@ -18,5 +18,55 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" >
     </eu.erikw.PullToRefreshListView>
+    
+   <LinearLayout
+        android:id="@+id/llEmptyList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+    	android:paddingLeft="5dp"
+    	android:paddingRight="5dp"
+    	android:paddingTop="5dp"
+        android:background="@drawable/progress_box" >
 
+        <TextView
+            android:id="@+id/tvEmptyListText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/emptyListText" />
+
+	</LinearLayout>
+	<LinearLayout
+        android:id="@+id/llListProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        android:paddingBottom="5dp"
+    	android:paddingLeft="5dp"
+    	android:paddingRight="5dp"
+    	android:paddingTop="5dp"
+        android:background="@drawable/progress_box" >
+        <TextView
+            android:id="@+id/tvListLoad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/getData" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ProgressBar
+            android:id="@+id/pbListProgess"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"/>
+        </RelativeLayout>
+        
+    </LinearLayout>
 </RelativeLayout>
