--- a/AdHoc/res/layout/activity_login.xml
+++ b/AdHoc/res/layout/activity_login.xml
@@ -33,6 +33,7 @@
         android:layout_centerHorizontal="true"
         android:drawableLeft="@drawable/ic_twitter_icon"
         android:drawablePadding="10dp"
+        android:layout_marginBottom="10dp"
         android:onClick="loginWithParse"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
