--- a/AdHoc/res/layout/fragment_info_window.xml
+++ b/AdHoc/res/layout/fragment_info_window.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,18 +7,35 @@
         android:id="@+id/tvInfoTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:text="Large Text" />
 
     <TextView
         android:id="@+id/tvInfoStartTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/tvInfoTitle"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/tvInfoAttendance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/tvInfoStartTime"
         android:text="TextView" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/ivArrowIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:paddingTop="14dp"
+        android:layout_toRightOf="@+id/tvInfoTitle"
+        android:src="@drawable/ic_arrow" />
+
+</RelativeLayout>
